# zephyr_rust_examples

./: README.md
cffi/: CMakeLists.txt  Cargo.toml  build.rs
cffi/src/: cffi.c  cffi.h  lib.rs
embedded_hal_i2c/: CMakeLists.txt  Cargo.toml  prj.conf  xiao_nrf52840.overlay
embedded_hal_i2c/src/: devicetree_wrapper.c  i2c_wrapper.c  lib.rs
embedded_hal_uart/: CMakeLists.txt  Cargo.toml  build.rs  prj.conf
embedded_hal_uart/src/: devicetree_wrapper.c  lib.rs  uart_wrapper.c
hello/: CMakeLists.txt  xiao_nrf52840.overlay
hello/src/: main.c
hello_rust/: .gitignore  CMakeLists.txt  Cargo.toml  prj.conf
hello_rust/src/: lib.rs
