[package]
# This must be rustapp for now.
name = "rustapp"
version = "0.1.0"
edition = "2021"
description = "The description of my app"
license = "Apache-2.0 or MIT"

[lib]
crate-type = ["staticlib"]

[dependencies]
zephyr = "0.1.0"
zephyr-sys = "0.1.0"
log = "0.4.22"
embedded-hal = "1.0.0"
lsm6ds3tr = "0.2.2"

[build-dependencies]
zephyr-build = "0.1.0"
